@@ -1,3 +1,10 @@
+2013-04-15 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/setup/setup_visuals.php, general/header.php: removed the
+	feature to set autorefresh for all pages.
+	
+	Fixes: #3609234
+
 2013-04-12 Sancho Lerena <slerena@artica.es>
 
 	* * extensions/net_tools.php
